	* fileio.c (read_non_regular, read_non_regular_quit): Pass Lisp_Object,
	as required by internal_condition_case_1.
	* print.c (strout): Use const char* for arg PTR.
	* regex.c (bcmp_translate): Use RE_TRANSLATE_TYPE, not Lisp_Object.
	(analyse_first): Fix "const const".
	* sysdep.c (set_file_times): Use EMACS_TIME, not struct timeval.
	* xgselect.c (xg_select): Use SELECT_TYPE, EMACS_TIME.

2010-07-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* alloc.c: Convert function definitions to standard C.
	* atimer.c:
	* bidi.c:
	* bytecode.c:
	* callint.c:
	* callproc.c:
	* casefiddle.c:
	* casetab.c:
	* category.c:
	* ccl.c:
	* character.c:
	* charset.c:
	* chartab.c:
	* cmds.c:
	* coding.c:
	* composite.c:
	* data.c:
	* dbusbind.c:
	* dired.c:
	* dispnew.c:
	* doc.c:
	* doprnt.c:
	* ecrt0.c:
	* editfns.c:
	* fileio.c:
	* filelock.c:
	* filemode.c:
	* fns.c:
	* font.c:
	* fontset.c:
	* frame.c:
	* fringe.c:
	* ftfont.c:
	* ftxfont.c:
	* gtkutil.c:
	* indent.c:
	* insdel.c:
	* intervals.c:
	* keymap.c:
	* lread.c:
	* macros.c:
	* marker.c:
	* md5.c:
	* menu.c:
	* minibuf.c:
	* prefix-args.c:
	* print.c:
	* ralloc.c:
	* regex.c:
	* region-cache.c:
	* scroll.c:
	* search.c:
	* sound.c:
	* strftime.c:
	* syntax.c:
	* sysdep.c:
	* termcap.c:
	* terminal.c:
	* terminfo.c:
	* textprop.c:
	* tparam.c:
	* undo.c:
	* unexelf.c:
	* window.c:
	* xfaces.c:
	* xfns.c:
	* xfont.c:
	* xftfont.c:
	* xgselect.c:
	* xmenu.c:
	* xrdb.c:
	* xselect.c:
	* xsettings.c:
	* xsmfns.c:
	* xterm.c: Likewise.

2010-07-03  Eli Zaretskii  <eliz@gnu.org>

	* msdos.c (IT_set_frame_parameters): Fix setting of colors in
	frames other than the initial one.  Fix reversal of colors when
	`reverse' is specified in the frame parameters.  Call
	update_face_from_frame_parameter instead of
	internal-set-lisp-face-attribute.  Initialize screen colors from
	initial_screen_colors[] when f->default_face_done_p is zero,
	instead of depending on being called with default-frame-alist as
	the alist argument.
